--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>Intro to Angular 1.5</title>
 </head>
-<body>
-<h1>Intro to Angular</h1>
+<body ng-app>
+<h1>{{ "Hello " + "Angular" }}</h1>
+<div> {{ 2 + 3 }} </div>
 
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js'></script>
