--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
 <h1>{{ "Hello " + "Angular" }}</h1>
 <div> {{ 2 + 3 }} </div>
 
+<div>
+  <input type="text" ng-model="firstName">
+  {{firstName}}
+
+</div>
+
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js'></script>
 </body>
