--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <title>Intro to Angular 1.5</title>
 </head>
-<body ng-app>
+<body ng-app="myApp">
+
 <h1>{{ "Hello " + "Angular" }}</h1>
+
 <div> {{ 2 + 3 }} </div>
 
 <div>
@@ -14,7 +16,12 @@
 
 </div>
 
+<div ng-controller="MyController">
+  <h3>{{  myFirstName }}</h3>
+</div>
+
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js'></script>
+<script src="js/myApp.js"></script>
 </body>
 </html>
