--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,13 @@
 
 <div> {{ 2 + 3 }} </div>
 
-<div>
-  <input type="text" ng-model="firstName">
-  {{firstName}}
-
-</div>
 
 <div ng-controller="MyController">
   <h3>{{  myFirstName }}</h3>
+  <input type="text" ng-model="myModel">
+  <div>
+    {{myModel}}
+  </div>
 </div>
 
 
