added injectable value

--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,15 @@
   <div>
     {{ myModel }}
   </div>
+  <div>
+    {{ mainCharacter }}
+  </div>
 </div>
 
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js'></script>
 <script src="js/myApp.js"></script>
+<script src="js/controllers.js"></script>
+<script src="js/values.js"></script>
 </body>
 </html>
