--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,12 @@
   </div>
 </div>
 
+<div class="version">{{ version }}</div>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js'></script>
 <script src="js/myApp.js"></script>
 <script src="js/controllers.js"></script>
 <script src="js/values.js"></script>
+<script src="js/constants.js"></script>
 </body>
 </html>
