--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
   <div>
     {{ mainCharacter }}
   </div>
+  <div>
+    {{ characterVersion }}
+  </div>
 </div>
 
 <div class="version">{{ version }}</div>
@@ -30,5 +33,6 @@
 <script src="js/controllers.js"></script>
 <script src="js/values.js"></script>
 <script src="js/constants.js"></script>
+<script src="js/factories.js"></script>
 </body>
 </html>
