--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
   <div>
     {{ characterVersion }}
   </div>
+  <div>
+    <h1>Books</h1>
+    {{ books }}
+  </div>
 </div>
 
 <div class="version">{{ version }}</div>
@@ -34,5 +38,6 @@
 <script src="js/values.js"></script>
 <script src="js/constants.js"></script>
 <script src="js/factories.js"></script>
+<script src="js/services.js"></script>
 </body>
 </html>
